media/templates/prowlarr/prowlarr-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prowlarr
  name: prowlarr
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 9696
  selector:
    app: prowlarr
  type: ClusterIP
