media/templates/prowlarr/prowlarr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: "ca-issuer"
    cert-manager.io/common-name: "prowlarr.raspberrypi"
  name: "prowlarr-ingress"
spec:
  tls:
  - hosts:
    - prowlarr.raspberrypi
    secretName: prowlarr-auto-certificate-key-pair
  rules:
  - host: prowlarr.raspberrypi
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prowlarr
            port:
              name: http
